--- a/JBB/Base.lproj/Main.storyboard
+++ b/JBB/Base.lproj/Main.storyboard
@@ -117,14 +117,124 @@
                     <view key="view" contentMode="scaleToFill" id="Pzt-D6-6vQ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="8Rq-vA-An6">
+                                <rect key="frame" x="25" y="75" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="vSF-Sl-oRK"/>
+                                    <constraint firstAttribute="height" constant="100" id="zwf-ca-8p5"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ang-pc-dz6">
+                                <rect key="frame" x="145" y="72" width="249" height="106.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Podcasts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vIn-lj-xkO">
+                                        <rect key="frame" x="0.0" y="0.0" width="96" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tune in for captivating stories from juco affiliates across the country" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oFs-Cb-I0L">
+                                        <rect key="frame" x="0.0" y="37" width="244" height="31.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T5D-bH-Ivu">
+                                        <rect key="frame" x="0.0" y="76.5" width="150" height="30"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="ADO-xU-2Rs"/>
+                                            <constraint firstAttribute="height" constant="30" id="Vu9-Hg-mBp"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <state key="normal" title="Subscribe to podcast">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="g7L-fR-V0S">
+                                <rect key="frame" x="20" y="198.5" width="394" height="614.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="podcastCell" rowHeight="152" id="6Kn-pq-8ch" customClass="PodcastTableViewCell" customModule="JBB" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="394" height="152"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6Kn-pq-8ch" id="xDY-7N-nkG">
+                                            <rect key="frame" x="0.0" y="0.0" width="363" height="152"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="954-ZO-agz">
+                                                    <rect key="frame" x="8" y="8" width="355" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.54901960780000003" green="0.54971713069999995" blue="0.54971713069999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YbU-l6-xQv">
+                                                    <rect key="frame" x="8" y="34" width="355" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qns-gk-w7a">
+                                                    <rect key="frame" x="8" y="59.5" width="355" height="51.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.54901960780000003" green="0.54971713069999995" blue="0.54971713069999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Minutes Remaining" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgC-yx-bEh">
+                                                    <rect key="frame" x="8" y="126" width="355" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.54901960780000003" green="0.54971713069999995" blue="0.54971713069999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="954-ZO-agz" secondAttribute="trailing" id="2LY-iJ-jga"/>
+                                                <constraint firstItem="YbU-l6-xQv" firstAttribute="top" secondItem="954-ZO-agz" secondAttribute="bottom" constant="8" id="C3G-nN-RiO"/>
+                                                <constraint firstItem="Qns-gk-w7a" firstAttribute="top" secondItem="YbU-l6-xQv" secondAttribute="bottom" constant="5" id="IhU-qc-9wq"/>
+                                                <constraint firstItem="954-ZO-agz" firstAttribute="leading" secondItem="xDY-7N-nkG" secondAttribute="leading" constant="8" id="KVq-Wo-wei"/>
+                                                <constraint firstItem="Qns-gk-w7a" firstAttribute="leading" secondItem="954-ZO-agz" secondAttribute="leading" id="LNh-ON-hEp"/>
+                                                <constraint firstItem="YbU-l6-xQv" firstAttribute="trailing" secondItem="954-ZO-agz" secondAttribute="trailing" id="RwP-3F-h4b"/>
+                                                <constraint firstItem="cgC-yx-bEh" firstAttribute="top" secondItem="Qns-gk-w7a" secondAttribute="bottom" constant="15" id="Y1J-vL-aj5"/>
+                                                <constraint firstItem="cgC-yx-bEh" firstAttribute="trailing" secondItem="954-ZO-agz" secondAttribute="trailing" id="cbY-hM-Iu1"/>
+                                                <constraint firstItem="Qns-gk-w7a" firstAttribute="trailing" secondItem="954-ZO-agz" secondAttribute="trailing" id="fLd-bv-lPd"/>
+                                                <constraint firstItem="cgC-yx-bEh" firstAttribute="leading" secondItem="954-ZO-agz" secondAttribute="leading" id="j9G-YI-zvm"/>
+                                                <constraint firstItem="954-ZO-agz" firstAttribute="top" secondItem="xDY-7N-nkG" secondAttribute="top" constant="8" id="k79-AA-uDS"/>
+                                                <constraint firstItem="YbU-l6-xQv" firstAttribute="leading" secondItem="954-ZO-agz" secondAttribute="leading" id="lZU-1f-Did"/>
+                                                <constraint firstAttribute="bottom" secondItem="cgC-yx-bEh" secondAttribute="bottom" constant="8" id="xll-MY-mdN"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateLabel" destination="954-ZO-agz" id="yfW-UV-8eL"/>
+                                            <outlet property="detailLabel" destination="Qns-gk-w7a" id="NQj-z4-twH"/>
+                                            <outlet property="minutesRemainingLabel" destination="cgC-yx-bEh" id="J9C-Ha-fVX"/>
+                                            <outlet property="titleLabel" destination="YbU-l6-xQv" id="Tvv-OS-PVg"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ang-pc-dz6" firstAttribute="leading" secondItem="8Rq-vA-An6" secondAttribute="trailing" constant="20" id="KZJ-nZ-VmW"/>
+                            <constraint firstItem="g7L-fR-V0S" firstAttribute="leading" secondItem="NBC-LM-Vjc" secondAttribute="leading" constant="20" id="MYF-Zj-i8O"/>
+                            <constraint firstItem="g7L-fR-V0S" firstAttribute="top" secondItem="ang-pc-dz6" secondAttribute="bottom" constant="20" id="TVU-ao-FTM"/>
+                            <constraint firstAttribute="trailing" secondItem="ang-pc-dz6" secondAttribute="trailing" constant="20" id="V8W-Oo-HZv"/>
+                            <constraint firstItem="g7L-fR-V0S" firstAttribute="bottom" secondItem="NBC-LM-Vjc" secondAttribute="bottom" id="Z0F-p0-WmT"/>
+                            <constraint firstItem="8Rq-vA-An6" firstAttribute="top" secondItem="Pzt-D6-6vQ" secondAttribute="top" constant="75" id="cea-7b-6ca"/>
+                            <constraint firstItem="g7L-fR-V0S" firstAttribute="trailing" secondItem="NBC-LM-Vjc" secondAttribute="trailing" id="qHo-Ej-6kP"/>
+                            <constraint firstItem="8Rq-vA-An6" firstAttribute="leading" secondItem="NBC-LM-Vjc" secondAttribute="leading" constant="25" id="uCI-qg-ww2"/>
+                            <constraint firstItem="ang-pc-dz6" firstAttribute="centerY" secondItem="8Rq-vA-An6" secondAttribute="centerY" id="wZP-uP-29n"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="NBC-LM-Vjc"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Podcast" image="antenna.radiowaves.left.and.right" catalog="system" id="gCC-Fb-iNc"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fKS-gt-EQj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3" y="-435"/>
+            <point key="canvasLocation" x="-7.2463768115942031" y="-427.23214285714283"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="6vW-V4-Jqb">
@@ -149,6 +259,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Logo" width="422" height="334"/>
         <image name="antenna.radiowaves.left.and.right" catalog="system" width="128" height="109"/>
         <image name="gift" catalog="system" width="128" height="121"/>
         <image name="list.number" catalog="system" width="128" height="97"/>
