--- a/JBB/Base.lproj/Main.storyboard
+++ b/JBB/Base.lproj/Main.storyboard
@@ -158,36 +158,36 @@
                                 </subviews>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="g7L-fR-V0S">
-                                <rect key="frame" x="20" y="198.5" width="394" height="614.5"/>
+                                <rect key="frame" x="5" y="198.5" width="409" height="614.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="podcastCell" rowHeight="152" id="6Kn-pq-8ch" customClass="PodcastTableViewCell" customModule="JBB" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="394" height="152"/>
+                                        <rect key="frame" x="0.0" y="28" width="409" height="152"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6Kn-pq-8ch" id="xDY-7N-nkG">
-                                            <rect key="frame" x="0.0" y="0.0" width="363" height="152"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="378" height="152"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="954-ZO-agz">
-                                                    <rect key="frame" x="8" y="8" width="355" height="18"/>
+                                                    <rect key="frame" x="8" y="8" width="370" height="18"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.54901960780000003" green="0.54971713069999995" blue="0.54971713069999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YbU-l6-xQv">
-                                                    <rect key="frame" x="8" y="34" width="355" height="20.5"/>
+                                                    <rect key="frame" x="8" y="34" width="370" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qns-gk-w7a">
-                                                    <rect key="frame" x="8" y="59.5" width="355" height="51.5"/>
+                                                    <rect key="frame" x="8" y="59.5" width="370" height="51.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.54901960780000003" green="0.54971713069999995" blue="0.54971713069999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Minutes Remaining" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgC-yx-bEh">
-                                                    <rect key="frame" x="8" y="126" width="355" height="18"/>
+                                                    <rect key="frame" x="8" y="126" width="370" height="18"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.54901960780000003" green="0.54971713069999995" blue="0.54971713069999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <nil key="highlightedColor"/>
@@ -222,7 +222,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="ang-pc-dz6" firstAttribute="leading" secondItem="8Rq-vA-An6" secondAttribute="trailing" constant="20" id="KZJ-nZ-VmW"/>
-                            <constraint firstItem="g7L-fR-V0S" firstAttribute="leading" secondItem="NBC-LM-Vjc" secondAttribute="leading" constant="20" id="MYF-Zj-i8O"/>
+                            <constraint firstItem="g7L-fR-V0S" firstAttribute="leading" secondItem="8Rq-vA-An6" secondAttribute="leading" constant="-20" id="MMf-5o-0ki"/>
                             <constraint firstItem="g7L-fR-V0S" firstAttribute="top" secondItem="ang-pc-dz6" secondAttribute="bottom" constant="20" id="TVU-ao-FTM"/>
                             <constraint firstAttribute="trailing" secondItem="ang-pc-dz6" secondAttribute="trailing" constant="20" id="V8W-Oo-HZv"/>
                             <constraint firstItem="g7L-fR-V0S" firstAttribute="bottom" secondItem="NBC-LM-Vjc" secondAttribute="bottom" id="Z0F-p0-WmT"/>
