--- a/JBB/Base.lproj/Main.storyboard
+++ b/JBB/Base.lproj/Main.storyboard
@@ -7,22 +7,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Rankings-->
-        <scene sceneID="i8g-KT-wTx">
-            <objects>
-                <viewController id="U25-Q6-pqe" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="e9s-Yq-DFU">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="4tz-SF-vlO"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Rankings" image="list.number" catalog="system" id="lW5-fW-PVR"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7TK-Fy-PRr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-4" y="242"/>
-        </scene>
         <!--Subscribe-->
         <scene sceneID="Nmh-ar-iI9">
             <objects>
@@ -37,7 +21,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uQs-Zj-KZV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4" y="911"/>
+            <point key="canvasLocation" x="-6" y="911"/>
         </scene>
         <!--News-->
         <scene sceneID="k2V-L2-hR2">
@@ -243,6 +227,91 @@
             </objects>
             <point key="canvasLocation" x="-7.2463768115942031" y="-427.23214285714283"/>
         </scene>
+        <!--Rankings-->
+        <scene sceneID="se1-gW-ldx">
+            <objects>
+                <tableViewController id="ZgA-94-lVW" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="GCO-cK-87g">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="rankingCell" rowHeight="143" id="lLV-5x-j4A" customClass="RankingTableViewCell" customModule="JBB" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="143"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lLV-5x-j4A" id="2Fh-ve-z0M">
+                                    <rect key="frame" x="0.0" y="0.0" width="383" height="143"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yyv-kA-0JD">
+                                            <rect key="frame" x="20" y="8" width="363" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.54901960780000003" green="0.54971713069999995" blue="0.54971713069999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lIx-yt-NYC">
+                                            <rect key="frame" x="20" y="41" width="363" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kdy-dX-lJz">
+                                            <rect key="frame" x="20" y="86" width="363" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Second" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hUP-qw-ape">
+                                            <rect key="frame" x="20" y="105.5" width="363" height="16"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <color key="textColor" red="0.54901960780000003" green="0.54971713069999995" blue="0.54971713069999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Third" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TYx-MY-hQ7">
+                                            <rect key="frame" x="20" y="121.5" width="363" height="12"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="lIx-yt-NYC" firstAttribute="leading" secondItem="yyv-kA-0JD" secondAttribute="leading" id="8wN-MB-ldd"/>
+                                        <constraint firstAttribute="trailing" secondItem="yyv-kA-0JD" secondAttribute="trailing" id="Bsx-2F-atn"/>
+                                        <constraint firstItem="kdy-dX-lJz" firstAttribute="trailing" secondItem="lIx-yt-NYC" secondAttribute="trailing" id="HWX-CE-azV"/>
+                                        <constraint firstItem="lIx-yt-NYC" firstAttribute="top" secondItem="yyv-kA-0JD" secondAttribute="bottom" constant="15" id="Hf9-Jd-ZJi"/>
+                                        <constraint firstItem="TYx-MY-hQ7" firstAttribute="top" secondItem="hUP-qw-ape" secondAttribute="bottom" id="LSM-Uy-5OJ"/>
+                                        <constraint firstItem="hUP-qw-ape" firstAttribute="leading" secondItem="kdy-dX-lJz" secondAttribute="leading" id="LdQ-CL-Ay3"/>
+                                        <constraint firstItem="kdy-dX-lJz" firstAttribute="leading" secondItem="lIx-yt-NYC" secondAttribute="leading" id="SmE-W9-H7y"/>
+                                        <constraint firstItem="yyv-kA-0JD" firstAttribute="leading" secondItem="2Fh-ve-z0M" secondAttribute="leading" constant="20" id="UA4-vs-Feh"/>
+                                        <constraint firstItem="TYx-MY-hQ7" firstAttribute="leading" secondItem="hUP-qw-ape" secondAttribute="leading" id="V6K-ok-y6J"/>
+                                        <constraint firstItem="lIx-yt-NYC" firstAttribute="trailing" secondItem="yyv-kA-0JD" secondAttribute="trailing" id="WaI-nx-0RE"/>
+                                        <constraint firstItem="hUP-qw-ape" firstAttribute="trailing" secondItem="kdy-dX-lJz" secondAttribute="trailing" id="Zwh-DS-nno"/>
+                                        <constraint firstItem="TYx-MY-hQ7" firstAttribute="trailing" secondItem="hUP-qw-ape" secondAttribute="trailing" id="dWW-ba-sC6"/>
+                                        <constraint firstItem="hUP-qw-ape" firstAttribute="top" secondItem="kdy-dX-lJz" secondAttribute="bottom" id="nqL-Jx-wr8"/>
+                                        <constraint firstItem="yyv-kA-0JD" firstAttribute="top" secondItem="2Fh-ve-z0M" secondAttribute="top" constant="8" id="scv-RE-x3r"/>
+                                        <constraint firstItem="kdy-dX-lJz" firstAttribute="top" secondItem="lIx-yt-NYC" secondAttribute="bottom" constant="15" id="yYZ-jn-UHR"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="dateLabel" destination="yyv-kA-0JD" id="w3I-7f-efK"/>
+                                    <outlet property="firstLabel" destination="kdy-dX-lJz" id="kBr-e7-Jkc"/>
+                                    <outlet property="rankingTitleLabel" destination="lIx-yt-NYC" id="IYj-ac-7jv"/>
+                                    <outlet property="secondLabel" destination="hUP-qw-ape" id="mtk-6a-i5b"/>
+                                    <outlet property="thirdLabel" destination="TYx-MY-hQ7" id="eE0-xw-YgM"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ZgA-94-lVW" id="aEv-v2-glq"/>
+                            <outlet property="delegate" destination="ZgA-94-lVW" id="gRw-98-cU2"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Rankings" image="list.number" catalog="system" id="mBA-JW-LDv"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jr5-vJ-p2f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-7.2463768115942031" y="248.4375"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="6vW-V4-Jqb">
             <objects>
@@ -256,8 +325,8 @@
                     <connections>
                         <segue destination="y2A-HN-vwi" kind="relationship" relationship="viewControllers" id="Xdf-w6-qpU"/>
                         <segue destination="dhk-z2-Lfh" kind="relationship" relationship="viewControllers" id="X65-lP-Dov"/>
-                        <segue destination="U25-Q6-pqe" kind="relationship" relationship="viewControllers" id="flP-GM-TQ7"/>
                         <segue destination="dRA-yZ-JQs" kind="relationship" relationship="viewControllers" id="x5p-MQ-76t"/>
+                        <segue destination="ZgA-94-lVW" kind="relationship" relationship="viewControllers" id="1Ed-LW-rdV"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cYC-BH-KoZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
