--- a/JBB/Base.lproj/LaunchScreen.storyboard
+++ b/JBB/Base.lproj/LaunchScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Eua-ne-EXR">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -8,33 +8,30 @@
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="EHf-IW-A2E">
+        <scene sceneID="i5n-VA-3f7">
             <objects>
-                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
+                <viewController id="Eua-ne-EXR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tX0-EZ-xYp">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="asJ-Jk-Pn3">
-                                <rect key="frame" x="30" y="278" width="354" height="350"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="350" id="qQy-L5-XT3"/>
-                                </constraints>
+                            <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="asJ-Jk-Pn3">
+                                <rect key="frame" x="30" y="244" width="354" height="418"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="asJ-Jk-Pn3" secondAttribute="trailing" constant="30" id="KOd-TC-xyY"/>
-                            <constraint firstItem="asJ-Jk-Pn3" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="bHr-mC-l7E"/>
-                            <constraint firstItem="asJ-Jk-Pn3" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="30" id="urh-YN-9kQ"/>
-                            <constraint firstItem="asJ-Jk-Pn3" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ze6-PS-bed"/>
+                            <constraint firstItem="hG0-Kr-GNw" firstAttribute="bottom" secondItem="asJ-Jk-Pn3" secondAttribute="bottom" constant="200" id="MT9-Jm-8ql"/>
+                            <constraint firstItem="asJ-Jk-Pn3" firstAttribute="top" secondItem="hG0-Kr-GNw" secondAttribute="top" constant="200" id="U0q-bG-7p8"/>
+                            <constraint firstItem="asJ-Jk-Pn3" firstAttribute="leading" secondItem="tX0-EZ-xYp" secondAttribute="leading" constant="30" id="fII-SY-jGd"/>
+                            <constraint firstAttribute="trailing" secondItem="asJ-Jk-Pn3" secondAttribute="trailing" constant="30" id="xED-5r-PQz"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="hG0-Kr-GNw"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z3B-I6-3hO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.173913043478265" y="375"/>
+            <point key="canvasLocation" x="-135" y="483"/>
         </scene>
     </scenes>
     <resources>
